--- a/package.json
+++ b/package.json
@@ -4,7 +4,13 @@
   "description": "Widgets collection for Evapolar projects",
   "main": "packages/lib/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --testMatch=**/*.it.js",
+    "format": "prettier --write \"**/*.{js,jsx,json,md,html}\"",
+    "format:check": "prettier --check \"**/*.{js,jsx,json,md,html}\"",
+    "lint": "eslint . --ext .js --ext .jsx",
+    "lint:fix": "eslint . --fix --ext .js --ext .jsx",
+    "format-lint-test": "npm run format && npm run lint && npm test",
+    "ci": "npm run format:check && npm run lint && npm test"
   },
   "repository": {
     "type": "git",
@@ -15,5 +21,40 @@
   "bugs": {
     "url": "https://github.com/EvapolarLTD/eva-widgets/issues"
   },
-  "homepage": "https://github.com/EvapolarLTD/eva-widgets#readme"
+  "homepage": "https://github.com/EvapolarLTD/eva-widgets#readme",
+  "dependencies": {
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
+    "prettier": "^2.0.5",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "styled-components": "^5.0.1"
+  },
+  "devDependencies": {
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "husky": "^4.2.5",
+    "identity-obj-proxy": "^3.0.0",
+    "images": "^3.0.2",
+    "jest": "^25.1.0",
+    "lint-staged": "^10.2.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,jsx}": "eslint --cache --fix"
+  }
 }
