--- a/package.json
+++ b/package.json
@@ -22,18 +22,13 @@
     "url": "https://github.com/EvapolarLTD/eva-widgets/issues"
   },
   "homepage": "https://github.com/EvapolarLTD/eva-widgets#readme",
-  "dependencies": {
-    "axios": "^0.19.2",
-    "babel-eslint": "^10.1.0",
-    "classnames": "^2.2.6",
-    "lodash": "^4.17.15",
-    "prettier": "^2.0.5",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "styled-components": "^5.0.1"
-  },
   "devDependencies": {
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
+  },
+  "dependencies": {
+    "react-redux": "^7.2.0",
+    "react-intl": "^3.12.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
@@ -47,7 +42,26 @@
     "identity-obj-proxy": "^3.0.0",
     "images": "^3.0.2",
     "jest": "^25.1.0",
-    "lint-staged": "^10.2.0"
+    "lint-staged": "^10.2.0",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
+    "prettier": "^2.0.5",
+    "prop-types": "^15.7.2",
+    "react-input-mask": "^2.0.4",
+    "react-spinners": "^0.8.0",
+    "styled-components": "^5.0.1",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/styles": "^4.9.10",
+    "gatsby": "^2.19.22"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "styled-components": "*",
+    "react-intl": "*"
   },
   "husky": {
     "hooks": {
