Added webpack bundler. Updated presets list. Updated gitignore / eslitignore.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Widgets collection for Evapolar projects",
   "main": "packages/lib/index.js",
   "scripts": {
+    "build": "webpack --mode production && npm run test",
     "test": "jest --testMatch=**/*.it.js",
     "format": "prettier --write \"**/*.{js,jsx,json,md,html}\"",
     "format:check": "prettier --check \"**/*.{js,jsx,json,md,html}\"",
@@ -24,12 +25,29 @@
   "homepage": "https://github.com/EvapolarLTD/eva-widgets#readme",
   "devDependencies": {
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "react-redux": "^7.2.0",
-    "react-intl": "^3.12.0",
+    "@babel/cli": "^7.0.0-beta.51",
+    "@babel/core": "^7.0.0-beta.51",
+    "@babel/preset-env": "^7.0.0-beta.51",
+    "@babel/preset-react": "^7.10.4",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
+    "@material-ui/styles": "^4.9.10",
+    "axios": "^0.19.2",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
+    "babel-loader": "^8.0.0-beta.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-istanbul": "^5.1.0",
+    "babel-plugin-react-svg": "^3.0.3",
+    "babel-preset-gatsby-package": "^0.5.2",
+    "babel-register": "^7.0.0-beta.3",
+    "classnames": "^2.2.6",
+    "cross-env": "^5.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
@@ -38,25 +56,23 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.5.0",
+    "gatsby": "^2.19.22",
+    "gatsby-link": "^2.4.13",
     "husky": "^4.2.5",
     "identity-obj-proxy": "^3.0.0",
     "images": "^3.0.2",
     "jest": "^25.1.0",
     "lint-staged": "^10.2.0",
-    "axios": "^0.19.2",
-    "babel-eslint": "^10.1.0",
-    "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "prettier": "^2.0.5",
     "prop-types": "^15.7.2",
     "react-input-mask": "^2.0.4",
+    "react-intl": "^3.12.0",
+    "react-redux": "^7.2.0",
     "react-spinners": "^0.8.0",
     "styled-components": "^5.0.1",
-    "@material-ui/core": "^4.9.7",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.46",
-    "@material-ui/styles": "^4.9.10",
-    "gatsby": "^2.19.22"
+    "svg-url-loader": "^6.0.0",
+    "webpack-node-externals": "^2.5.1"
   },
   "peerDependencies": {
     "react": "*",
