Added format command to preversion

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:fix": "eslint . --fix --ext .js --ext .jsx",
     "format-lint-test": "npm run format && npm run lint && npm test",
     "ci": "npm run format:check && npm run lint && npm test",
-    "preversion": "npm ci && npm run ci && npm run build",
+    "preversion": "npm ci && npm run format && npm run ci && npm run build",
     "postversion": "npm publish"
   },
   "repository": {
